--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,13 +16,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/micro": "^7.3.3",
-    "@types/node": "^13.1.6",
+    "@types/node": "^13.7.7",
     "micro": "^9.3.4",
-    "micro-r": "^1.0.0",
+    "micro-r": "^1.1.0",
     "supertest": "^4.0.2",
-    "tape": "^4.13.0",
-    "ts-node": "^8.6.1",
-    "typescript": "^3.7.4"
+    "tape": "^4.13.2",
+    "tar-stream": "^2.1.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3",
+    "zlib": "^1.0.5"
   },
   "dependencies": {}
 }
