--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "root",
+  "name": "nsync",
   "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap --hoist"
+  },
   "devDependencies": {
     "lerna": "^3.20.2"
   }
